// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer rendering should render a table when isMobile: false 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <table>
        <thead>
          <tr>
            <th
              scope="col"
            >
              Heading 1
            </th>
            <th
              scope="col"
            >
              Heading 2
            </th>
            <th
              scope="col"
            >
              Heading 3
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              r1c1
            </td>
            <td>
              r1c2
            </td>
            <td>
              r1c3
            </td>
          </tr>
          <tr>
            <td>
              r2c1
            </td>
            <td>
              r2c2
            </td>
            <td>
              r2c3
            </td>
          </tr>
          <tr>
            <td>
              r3c1
            </td>
            <td>
              r3c2
            </td>
            <td>
              r3c3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renderer rendering should render a table when isMobile: true 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        style="margin-left: -16px; margin-right: -16px;"
      >
        <div
          style="padding-left: 0px; padding-right: 0px; transform: translate3d(0,0,0); overflow-x: auto;"
        >
          <span
            style="display: block; width: 100%; transform: scale(1, 1)  translate(0, 8px); transform-origin: 0 0; opacity: 0;"
          >
            <table
              tabindex="0"
            >
              <thead>
                <tr>
                  <th
                    scope="col"
                  >
                    Heading 1
                  </th>
                  <th
                    scope="col"
                  >
                    Heading 2
                  </th>
                  <th
                    scope="col"
                  >
                    Heading 3
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    r1c1
                  </td>
                  <td>
                    r1c2
                  </td>
                  <td>
                    r1c3
                  </td>
                </tr>
                <tr>
                  <td>
                    r2c1
                  </td>
                  <td>
                    r2c2
                  </td>
                  <td>
                    r2c3
                  </td>
                </tr>
                <tr>
                  <td>
                    r3c1
                  </td>
                  <td>
                    r3c2
                  </td>
                  <td>
                    r3c3
                  </td>
                </tr>
              </tbody>
            </table>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer rendering should render block math 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        This is some block math
      </div>
    </div>
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="1"
    >
      <div
        class="perseus-block-math"
      >
        <div
          class="perseus-block-math-inner"
          style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
        >
          <span
            class="mock-TeX"
          >
            1 + 2
          </span>
        </div>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        And a footer.
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer rendering should render block math on mobile 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        This is some block math
      </div>
    </div>
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="1"
    >
      <div
        class="perseus-block-math"
        style="margin-left: -16px; margin-right: -16px;"
      >
        <div
          class="perseus-block-math-inner"
          style="overflow-x: auto; overflow-y: hidden; margin-top: -10px; margin-bottom: -10px; transform: translate3d(0,0,0); padding: 10px 16px 10px 16px;"
        >
          <span
            style="display: block; width: 100%; transform: scale(1, 1); transform-origin: 0 0; opacity: 1;"
          >
            <span
              class="mock-TeX"
            >
              1 + 2
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        And a footer.
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer rendering should render columns 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive perseus-renderer-two-columns"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="perseus-two-columns"
      >
        <div
          class="perseus-column"
        >
          <div
            class="perseus-column-content"
          >
            <div
              class="paragraph"
            >
              Stuff in column 1
            </div>
          </div>
        </div>
        <div
          class="perseus-column"
        >
          <div
            class="perseus-column-content"
          >
            <div
              class="paragraph"
            >
              Stuff in column 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer rendering should render the math 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        This is some inline math: 
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            1 + 2
          </span>
          <span />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer snapshots initial render: initial render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        The total number of boxes the forklift can carry is 
        <div
          class="perseus-widget-container widget-nohighlight widget-inline-block"
        >
          <div
            class=""
            style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0;"
          >
            <label
              class=""
              for=":r0:"
              style="display: block; font-family: Lato, "Noto Sans", sans-serif; font-weight: 700; font-size: 16px; line-height: 20px;"
            >
              Test visible label
            </label>
            <div
              class="perseus-dropdown"
              style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0;"
            >
              <button
                aria-controls=":r1:"
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-invalid="false"
                aria-label="Test ARIA label"
                class=""
                id=":r0:"
                role="combobox"
                style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: space-between; height: 40px; padding-left: 16px; padding-right: 12px; border-radius: var(--wb-border-radius-radius_040); border-style: solid; outline: none; text-decoration: none; box-sizing: border-box; white-space: nowrap;"
                type="button"
              >
                <span
                  class=""
                  style="display: block; font-family: Lato, "Noto Sans", sans-serif; font-weight: 400; font-size: 16px; line-height: 20px; margin-right: 8px; white-space: nowrap; user-select: none; overflow: hidden; text-overflow: ellipsis;"
                >
                  <div
                    class="perseus-renderer perseus-renderer-responsive"
                  >
                    <div
                      class="paragraph"
                      data-perseus-paragraph-index="0"
                    >
                      <div
                        class="paragraph"
                      >
                        greater/less than or equal to
                      </div>
                    </div>
                  </div>
                </span>
                <span
                  aria-hidden="true"
                  class=""
                  style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: 16px; height: 16px; mask-image: url(caret-down-bold.svg); min-width: 16px;"
                />
              </button>
            </div>
          </div>
        </div>
         
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            60
          </span>
          <span />
        </span>
        .
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer snapshots renders a placeholder for a deprecated widget: deprecated widget 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            style="padding-top: 8px; padding-bottom: 8px;"
          >
            <div
              class=""
              role="status"
              style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0; border-inline-start-width: 6px; width: 100%; border-inline-start-color: var(--wb-semanticColor-status-notice-foreground);"
            >
              <div
                class=""
                style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: absolute; z-index: 0; min-height: 0; min-width: 0; top: 0px; bottom: 0px; left: 0px; right: 0px; opacity: 0.08;"
              />
              <div
                class=""
                style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: row; margin: 0px; padding: 8px; position: relative; z-index: 0; min-height: 0; min-width: 0;"
              >
                <span
                  aria-label="info"
                  class=""
                  data-testid="banner-kind-icon"
                  role="img"
                  style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; background-color: currentColor; width: 24px; height: 24px; mask-image: url(info.svg); margin-top: 8px; margin-bottom: 8px; margin-inline-start: 2px; margin-inline-end: 8px; align-self: flex-start;"
                />
                <div
                  class=""
                  style="align-items: center; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: row; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0; flex: 1; align-content: center; flex-wrap: wrap; justify-content: space-between;"
                >
                  <div
                    class=""
                    style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 8px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0; flex-shrink: 1; text-align: start; overflow-wrap: break-word;"
                  >
                    <span
                      class=""
                      style="display: block; font-family: Lato, "Noto Sans", sans-serif; font-weight: 400; font-size: 14px; line-height: 18px;"
                    >
                      Sorry, this part of the question is no longer available. 😅 Don't worry, you won't be graded on this part. Keep going!
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
